html change to prevent tooltip flicker

--- a/frontend/source/sass/components/_tables.scss
+++ b/frontend/source/sass/components/_tables.scss
@@ -10,6 +10,10 @@ table {
     padding-bottom: 1.5em;
     vertical-align: bottom;
   }
+  p {
+    font-size: $medium-font-size;
+    margin: 0;
+  }
   tbody {
     tr {
       &:nth-child(odd) {
@@ -108,22 +112,13 @@ td.error {
   color: $color-secondary-dark;
   font-weight: $font-weight-bold;
   span {
-    border-bottom: 1px dotted $color-secondary-dark;
-    margin-right: 22px; /* hack to underline span text only */
+    display: inline-block;
+    padding-right: 22px;
     position: relative;
-    /* This is the red circle with the question mark -- the "info badge." */
-    &:after {
-      height: 15px;
-      width: 15px;
-      content: " ";
-      margin-left: $space-half;
-      display: inline-block;
-      margin-right: -22px; /* hack to underline span text only */
-      background-image: url("../../images/icon-info-BC1630.svg");
-      background-size: 15px 15px;
-      background-repeat: no-repeat;
-      position: absolute;
-    }
+    background-image: url("../../images/icon-info-BC1630.svg");
+    background-size: 15px 15px;
+    background-repeat: no-repeat;
+    background-position: top 2px right; /* the 1px accommodates the underlined text next to the badge */
     /* this is the tooltip's bottom arrow. It needs to be part of the span so
      * it is aware of the span's width. This is the only way I know of to position
      * the arrow over the info-badge (defined as the :after element) when the
@@ -131,8 +126,8 @@ td.error {
     &:before {
       display: none;
       position: absolute;
-      bottom: 150%;
-      right: -23px; /* positions the tooltip arrow over the info badge */
+      bottom: 120%;
+      right: -6px; /* positions the tooltip arrow over the info badge */
       border-top: 15px solid $color-secondary-lightest;
       border-right: 12px solid transparent;
       border-left: 12px solid transparent;
@@ -142,15 +137,19 @@ td.error {
     &:hover {
       cursor: pointer;
       border-bottom-color: transparent;
+      background-image: url("../../images/icon-info-BC1630-outline.svg");
       &:before {
         display: block;
-      }
-      &:after {
-        background-image: url("../../images/icon-info-BC1630-outline.svg");
       }
       + [role=tooltip] {
         display: block;
       }
+      p {
+        border-bottom-color: transparent;
+      }
+    }
+    p {
+      border-bottom: 1px dotted $color-secondary-dark;
     }
   }
 
